syntax = "proto3";

package com.seed.documents.v1alpha;

option go_package = "seed/backend/genproto/documents/v1alpha;documents";

// Content graph service provides access to citations (backlinks).
service ContentGraph {
  rpc ListCitations(ListCitationsRequest) returns (ListCitationsResponse);
}

message ListCitationsRequest {
  // Required. Document ID for which citations need to be retrieved.
  string document_id = 1;
}

// Response with citations.
message ListCitationsResponse {
  // List of links that point to the requested document, recursively, according to the requested depth.
  repeated Link links = 1;
}

// Description of a link inside a document.
message Link {
  // Required. Describes where link originates from.
  LinkNode source = 1;

  // Required. Describes where link points to.
  // Here the block_id is optional, because the whole document can be linked.
  LinkNode target = 2;

  // Indicates whether the link targets the latest version of the document.
  // Notice that the target link node might still have a version specified,
  // which has to be treated as a frame of reference, i.e. "this version or newer"
  // if is_latest is true.
  bool is_latest = 3;
}

// Describes "sides" of a Link.
message LinkNode {
  // ID of the document on one side of a Link.
  string document_id = 1;

  // Version of the document.
  string version = 2;

  // ID of the block inside the document.
  string block_id = 3;
}
